tyle.css created

--- a/index.html
+++ b/index.html
@@ -15,15 +15,42 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/bfa195b1fd.js"></script>
     <title>Pattern</title>
   </head>
 
   <body>
+    <!-- this is my navbar start -->
     <nav class="navbar bg-dark navbar-dark">
       <div class="container">
-        <a href="" class="navbar-brand">myband</a>
+        <a href="" class="navbar-brand">
+          <i class="fas fa-campground mr-3"></i>
+          PATTERN
+        </a>
       </div>
     </nav>
+    <!-- my navbar end here -->
+
+    <!-- jumbotron start here -->
+    <div class="jumbotron text-center">
+      <h1 class="display-4">PATTERN</h1>
+      <p class="lead">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde eos quae,
+        nobis adipisci reiciendis iure optio, quia, culpa alias ad corporis
+        laudantium hic ratione voluptatum aspernatur ipsa reprehenderit
+        repudiandae velit dolorum aut accusamus saepe officiis soluta.
+        Explicabo, suscipit asperiores, error esse quas eligendi rem soluta
+        iusto, perspiciatis possimus aspernatur praesentium?
+      </p>
+
+      <button type="button" class="btn btn-primary btn-lg mr-2">
+        Large button
+      </button>
+      <button type="button" class="btn btn-secondary btn-lg">
+        Large button
+      </button>
+    </div>
+    <!-- jumbotron end here -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
