site title added to navbar

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
       >
         <div class="d-flex justify-content-between holder-1">
           <a class="navbar-brand" href="#">
-            <i class="fas fa-box-open"></i>
+            <i class="fas fa-box-open box-logo"></i>
             LOGISTICS
           </a>
+          <h3 class="site-title">READINESS SQUADRON</h3>
           <!-- ============================================SEARCH BAR START================================================= -->
           <form class="form-inline my-2 my-lg-0">
             <input
@@ -75,22 +76,13 @@
         <!-- row that contain the jumbotron stars here -->
         <div class="row">
           <!-- jumbotron start here -->
-          <div class="jumbotron text-center col-lg-12">
-            <h1 class="display-4">LOGISTICS READINESS SQUADRON</h1>
-            <p class="lead">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde eos
-              quae, nobis adipisci reiciendis iure optio, quia, culpa alias ad
-              corporis laudantium hic ratione voluptatum aspernatur ipsa
-              reprehenderit repudiandae velit dolorum aut accusamus saepe
-              officiis soluta. Explicabo, suscipit asperiores, error esse quas
-              eligendi rem soluta iusto, perspiciatis possimus aspernatur
-              praesentium?
-            </p>
+          <div class="jumbotron text-center col-lg-12 my-jumbo">
+            <h1 class="display-4">READINESS SQUADRON</h1>
             <!-- buttons start here -->
-            <button type="button" class="btn btn-primary btn-lg mr-2">
+            <button type="button" class="btn btn-primary btn-lg mr-2 mb-4 ml-5">
               My life
             </button>
-            <button type="button" class="btn btn-secondary btn-lg">
+            <button type="button" class="btn btn-secondary btn-lg mr-2 mb-4">
               My hobbies
             </button>
           </div>
