--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 With supporting text below as a natural lead-in to additional
                 content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Inspect Items</a>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
                 With supporting text below as a natural lead-in to additional
                 content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Report Missing Items</a>
             </div>
           </div>
         </div>
