--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CDN -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -21,14 +21,14 @@
   </head>
 
   <body>
-    <!-- main container -->
+    <!-- =====================================MAIN CONTAINER START======================================================== -->
     <div class="container-fluid main-container">
       <!-- ======================================NAVBAR START============================================================ -->
 
       <nav
         class="navbar navbar-dark bg-dark fixed-top flex-column justify-content-center align-items-center"
       >
-        <div class="d-flex justify-content-between holder-1">
+        <div class="d-flex justify-content-between top-content-holder">
           <a class="navbar-brand" href="#">
             <i class="fas fa-box-open box-logo"></i>
             LOGISTICS
@@ -73,22 +73,23 @@
       <!-- ======================================NAVBAR END============================================================ -->
 
       <div class="container-fluid">
-        <!-- row that contain the jumbotron stars here -->
+        <!-- ROW THAT CONTAINS THE JUMBOTRON STARTS  HERE -->
         <div class="row">
-          <!-- jumbotron start here -->
+          <!-- JUMBOTRON STARTS HERE -->
           <div class="jumbotron text-center col-lg-12 my-jumbo">
-            <h1 class="display-4">READINESS SQUADRON</h1>
-            <!-- buttons start here -->
+            <h1 class="display-4">IS OUR EXPERTISE</h1>
+
+            <!-- BUTTONS START HERE -->
             <button type="button" class="btn btn-primary btn-lg mr-2 mb-4 ml-5">
-              My life
+              VIEW INVENTORY
             </button>
             <button type="button" class="btn btn-secondary btn-lg mr-2 mb-4">
-              My hobbies
+              PAYMENT
             </button>
           </div>
-          <!-- buttons end here -->
+          <!-- BUTTONS END HERE-->
         </div>
-        <!-- jumbotron ends here -->
+        <!-- JUMBOTRON ENDS HERE-->
       </div>
 
       <!-- ============================= card starts here========================== -->
@@ -97,10 +98,10 @@
         <div class="col-sm-6 mb-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
+              <h5 class="card-title">BASES ITEMS INPECTIONS</h5>
               <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
+                Use this port to register the quality of stock items that are
+                due for inspection.
               </p>
               <a href="#" class="btn btn-primary">Inspect Items</a>
             </div>
@@ -109,10 +110,9 @@
         <div class="col-sm-6 mb-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
+              <h5 class="card-title">LOST ITEMS ACCOUNTABILITY</h5>
               <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
+                Use this port to report any lost items.
               </p>
               <a href="#" class="btn btn-primary">Report Missing Items</a>
             </div>
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-    <!-- main container -->
+    <!-- MAIN CONTAINER ENDS HERE -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
